Closed
Bug 1107595
Opened 11 years ago
Closed 11 years ago
wrong spelling of "behavior" in AnimationCommon.cpp
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: milan.loveless, Assigned: milan.loveless, Mentored)
Details
Attachments
(1 file)
|
1.33 KB,
patch
|
birtles
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.122 Safari/537.36
Steps to reproduce:
I read the source code of AnimationCommon.cpp
Actual results:
The file uses the British spelling of the word "behavior" ("behaviour")
Expected results:
It should use the American English spelling of the word "behavior"
| Assignee | ||
Updated•11 years ago
|
Severity: normal → trivial
OS: Mac OS X → All
Hardware: x86 → All
Updated•11 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•11 years ago
|
Assignee: nobody → milan.loveless
Mentor: birtles
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8532162 -
Flags: review?(birtles)
Comment 2•11 years ago
|
||
Comment on attachment 8532162 [details] [diff] [review]
1107595 - fixed spelling of behavior
Review of attachment 8532162 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks Milan!
Attachment #8532162 -
Flags: review?(birtles) → review+
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 3•11 years ago
|
||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in
before you can comment on or make changes to this bug.
Description
•