Bug 1107595 - Changed spelling of behaviour to behavior in AnimationCommon.cpp; r=birtles